# ENPM661-Proj3.2

./: Cost.py  Howplotcurves.py  README.md  a_star_Amr_Timothy.py  a_star_Timothy_Amr.py  a_star_adjusted.py  new_map_visual.py  turtlebot3_control  turtlebot3_control_updated_explore  turtlebot3_teleop_key  www.robotis.us:turtlebot-3-burger-rpi4-2gb-us.webloc
Part01/: a_star_Amr_Timothy.py
Part02/project_3_ROS/: CMakeLists.txt
Part02/project_3_ROS/nodes/: turtlebot3_control
project_3_ROS/: CMakeLists.txt  package.xml
project_3_ROS/launch/: go.launch  turtlebot3_empty_world.launch
project_3_ROS/nodes/: turtlebot3_control  turtlebot3_control (old)  turtlebot3_control.py  turtlebot3_control_old
